feat: add platform navigation section

--- a/introduction/platform-migration.mdx
+++ b/introduction/platform-migration.mdx
@@ -113,3 +113,18 @@ If you are using [deploy-action](https://github.com/shuttle-hq/deploy-action), c
 
 Once you have moved resources, deployed your app to shuttle.dev, and want to move your custom domain, update your DNS records according to [Domain names](/docs/domain-names) and use the new `shuttle certificate` command to add SSL certificates.
 HTTPS traffic should then be enabled for your custom domain.
+
+# Navigate between the Old and the New Platform
+## Access the NEW platform
+
+- Main website: [www.shuttle.dev](http://www.shuttle.dev)
+- New Console: [console.shuttle.dev](http://console.shuttle.dev)
+- New Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- Command Line: new `shuttle` command (installed  alongside the previous `cargo shuttle`)
+
+## Access the OLD platform (for existing users)
+
+- Main website: not accessible, redirects to [www.shuttle.dev](http://www.shuttle.dev)
+- Old Console: [console.shuttle.rs](http://console.shuttle.rs)
+- Old Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- Command Line (unchanged):  `cargo shuttle` as usual
