--- a/introduction/platform-update.mdx
+++ b/introduction/platform-update.mdx
@@ -11,6 +11,17 @@ Introducing the new Shuttle platform! We've supercharged what developers love ab
 - When is the old platform shutting down?
 - Do I have to migrate my project?
 - etc */}
+## Access the NEW platform
+
+- New Console: [console.shuttle.dev](http://console.shuttle.dev)
+- New Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- Command Line: new `shuttle` command (installed  alongside the previous `cargo shuttle`)
+
+## Access the OLD platform (for existing users)
+
+- Old Console: [console.shuttle.rs](http://console.shuttle.rs)
+- Old Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- Command Line (unchanged):  `cargo shuttle` as usual
 
 ## Changelog
 
