--- a/introduction/platform-update.mdx
+++ b/introduction/platform-update.mdx
@@ -12,6 +12,20 @@ Introducing the new Shuttle platform! We've supercharged what developers love ab
 - Do I have to migrate my project?
 - etc */}
 
+## Domain and CLI changes
+
+### Access the NEW platform
+
+- New Console: [console.shuttle.dev](http://console.shuttle.dev)
+- New Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- Command Line: new `shuttle` command (installed alongside `cargo shuttle`)
+
+### Access the OLD platform (for existing users)
+
+- Old Console: [console.shuttle.rs](http://console.shuttle.rs)
+- Old Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- Command Line: `cargo shuttle` (unchanged)
+
 ## Changelog
 
 ### Changed
