--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -12,7 +12,7 @@ Deployments to different Shuttle projects run in their own ECS service (Fargate 
 ## Project Limits
 
 <Info>
-In the free Community Tier, you can have a total of 3 projects at once.
+In the free Community Tier, you can have one project.
 See [Pricing](https://www.shuttle.dev/pricing) for Pro tier benefits, such as more projects.
 </Info>
 
