--- a/introduction/platform-update.mdx
+++ b/introduction/platform-update.mdx
@@ -25,7 +25,7 @@ Introducing the new Shuttle platform! We've supercharged what developers love ab
 ### Access the OLD platform (for existing users)
 
 - Old Console: [console.shuttle.rs](http://console.shuttle.rs)
-- Old Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- Old Docs: [docs.shuttle.rs](http://docs.shuttle.rs)
 - Command Line: `cargo shuttle` (unchanged)
 
 ## Changelog
