--- a/examples/actix-postgres.mdx
+++ b/examples/actix-postgres.mdx
@@ -10,10 +10,9 @@ The following routes are provided:
 - GET `/todos/<id>` - Get a to-do item by ID.
 - POST `/todos` - Create a to-do item. Takes "note" as a JSON body parameter.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder actix-web/postgres
+shuttle init --from shuttle-hq/shuttle-examples --subfolder actix-web/postgres
 ```
 
 ## Code
