--- a/examples/actix-websocket-actorless.mdx
+++ b/examples/actix-websocket-actorless.mdx
@@ -7,10 +7,9 @@ description: "Learn how websockets can upgrade your web service by providing liv
 
 This example shows how to use a WebSocket to show the live status of the Shuttle API on a web page. The app also provides an echo service and notifies when the number of connected users change.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder actix-web/websocket-actorless
+shuttle init --from shuttle-hq/shuttle-examples --subfolder actix-web/websocket-actorless
 ```
 
 ## Code
