--- a/examples/axum-static-files.mdx
+++ b/examples/axum-static-files.mdx
@@ -9,11 +9,10 @@ This example has one route at `/` where the homepage is served and shows you how
 
 Note that static assets are declared in the `Shuttle.toml` file.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
-  --subfolder axum/static-files
+shuttle init --from shuttle-hq/shuttle-examples --subfolder axum/static-files
 ```
 
 ## Code
