--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -12,7 +12,7 @@ This section revolves around simple Axum examples you can get quickly started wi
 
 <Tip>If you are looking for step-by-step guides, check out our [Tutorials](/templates/tutorials) section.</Tip>
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 
 ```bash
 shuttle init --template axum
@@ -42,7 +42,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.3"
+axum = "0.7.4"
 shuttle-axum = "0.48.0"
 shuttle-runtime = "0.48.0"
 tokio = "1.28.2"
