--- a/examples/rocket-postgres.mdx
+++ b/examples/rocket-postgres.mdx
@@ -11,10 +11,9 @@ The following routes are provided:
 - GET `/todo/<id>` - Get a to-do item by ID.
 - POST `/todo` - Create a to-do item. Takes "note" as a JSON body parameter.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder rocket/postgres
+shuttle init --from shuttle-hq/shuttle-examples --subfolder rocket/postgres
 ```
 
 ## Code
