--- a/integrations/custom-resources.mdx
+++ b/integrations/custom-resources.mdx
@@ -9,11 +9,10 @@ The example resource we'll be making will be a Plain Data Object (which we will 
 
 We are using the Axum framework in `main.rs` so we can showcase the resource in action, but the implementation is entirely separate from what web framework you use so you can add your custom resource to any Shuttle-hosted resource.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 
 ```bash
-shuttle init --from https://github.com/shuttle-hq/shuttle-examples \
-  --subfolder custom-resource/pdo
+shuttle init --from https://github.com/shuttle-hq/shuttle-examples --subfolder custom-resource/pdo
 ```
 
 <CodeGroup>
