--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -9,10 +9,9 @@ This example has one route at `/` where the homepage is served and shows you how
 
 Note that static assets are declared in the `Shuttle.toml` file.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder actix-web/static-files
+shuttle init --from shuttle-hq/shuttle-examples --subfolder actix-web/static-files
 ```
 
 ## Code
