--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -11,7 +11,7 @@ This section revolves around simple Actix examples you can get quickly started w
 
 <Tip>If you are looking for step-by-step guides, check out our [Tutorials](/templates/tutorials) section.</Tip>
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
 shuttle init --template actix-web 
 ```
