--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -12,7 +12,7 @@ This section revolves around simple Rocket examples you can get quickly started 
 
 <Tip>If you are looking for step-by-step guides, check out our [Tutorials](/templates/tutorials) section.</Tip>
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
 shuttle init --template rocket
 ```
