--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -58,13 +58,16 @@ edition = "2021"
 [dependencies]
 actix-web = "4.3.1"
 actix-files = "0.6.2"
-shuttle-actix-web = "0.27.0"
-shuttle-runtime = "0.27.0"
+shuttle-actix-web = "0.48.0"
+shuttle-runtime = "0.48.0"
 tokio = "1.26.0"
 ```
 
 ```toml Shuttle.toml
-assets = ["assets/*"]
+[build]
+assets = [
+    "assets/*",
+]
 ```
 
 </CodeGroup>
