--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -9,10 +9,9 @@ This example has one route at `/` where the homepage is served and shows you how
 
 Note that static assets are declared in the `Shuttle.toml` file.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder actix-web/static-files
+shuttle init --from shuttle-hq/shuttle-examples --subfolder actix-web/static-files
 ```
 
 ## Code
@@ -59,13 +58,16 @@ edition = "2021"
 [dependencies]
 actix-web = "4.3.1"
 actix-files = "0.6.2"
-shuttle-actix-web = "0.27.0"
-shuttle-runtime = "0.27.0"
+shuttle-actix-web = "0.48.0"
+shuttle-runtime = "0.48.0"
 tokio = "1.26.0"
 ```
 
 ```toml Shuttle.toml
-assets = ["assets/*"]
+[build]
+assets = [
+    "assets/*",
+]
 ```
 
 </CodeGroup>
