--- a/examples/axum-static-files.mdx
+++ b/examples/axum-static-files.mdx
@@ -7,13 +7,12 @@ description: "This article walks you through setting up static files with Axum, 
 
 This example has one route at `/` where the homepage is served and shows you how you can serve HTML or other types of files with Actix Web.
 
-Note that static assets are declared in the `Shuttle.toml` file.
+Note that build assets are declared in `Shuttle.toml`.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
-  --subfolder axum/static-files
+shuttle init --from shuttle-hq/shuttle-examples --subfolder axum/static-files
 ```
 
 ## Code
@@ -65,7 +64,10 @@ tower-http = { version = "0.5.0", features = ["fs"] }
 ```
 
 ```toml Shuttle.toml
-assets = ["assets/*"]
+[build]
+assets = [
+    "assets",
+]
 ```
 </CodeGroup>
 
