--- a/examples/rocket-static-files.mdx
+++ b/examples/rocket-static-files.mdx
@@ -9,10 +9,9 @@ This example has one route at `/` where the homepage is served and shows you how
 
 Note that static assets are declared in the `Shuttle.toml` file.
 
-You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
+You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
-shuttle init --from shuttle-hq/shuttle-examples \
- --subfolder rocket/static-files
+shuttle init --from shuttle-hq/shuttle-examples --subfolder rocket/static-files
 ```
 
 ## Code
@@ -82,7 +81,10 @@ tokio = "1.26.0"
 ```
 
 ```toml Shuttle.toml
-assets = ["assets/*"]
+[build]
+assets = [
+    "assets",
+]
 ```
 </CodeGroup>
 
