--- a/docs/local-run.mdx
+++ b/docs/local-run.mdx
@@ -62,7 +62,7 @@ Here are some small tips and tricks to boost your productivity when developing l
 To live reload your Shuttle app when you save a file, you can use [cargo-watch](https://github.com/watchexec/cargo-watch):
 
 ```bash
-# This will e(x)ecute `shuttle run` when you save a file.
+# This will execute `shuttle run` when you save a file.
 cargo watch -s 'shuttle run'
 # This will also (q)uietly (c)lear the console between runs.
 cargo watch -qcs 'shuttle run'
