docs: local-run.mdx still suggests running shuttle as cargo command instead of shell command (#304)
* Update local-run.mdx

Local run docs still use `cargo watch -x 'shuttle run'`, which translates to `cargo shuttle run`; instead of using `cargo watch-s 'shuttle run'`, which translates to `shuttle run`.

* nit

---------

Co-authored-by: jonaro00 <54029719+jonaro00@users.noreply.github.com>

--- a/docs/local-run.mdx
+++ b/docs/local-run.mdx
@@ -62,10 +62,10 @@ Here are some small tips and tricks to boost your productivity when developing l
 To live reload your Shuttle app when you save a file, you can use [cargo-watch](https://github.com/watchexec/cargo-watch):
 
 ```bash
-# This will e(x)ecute `shuttle run` when you save a file.
-cargo watch -x 'shuttle run'
+# This will execute `shuttle run` when you save a file.
+cargo watch -s 'shuttle run'
 # This will also (q)uietly (c)lear the console between runs.
-cargo watch -qcx 'shuttle run'
+cargo watch -qcs 'shuttle run'
 
 # There are many other helpful options, see `cargo watch --help`
 ```
