feat: add updated migration docs

--- a/migrations/platform-migration.mdx
+++ b/migrations/platform-migration.mdx
@@ -1,7 +1,7 @@
 ---
-title: Platform migration guide
+title: Migrating to the new platform
 description: How to migrate projects from shuttle.rs to shuttle.dev
-icon: dove
+
 ---
 
 This guide is for migration old projects from **shuttle.rs** to the new **shuttle.dev** platform.
