--- a/migrations/migrating-to-shuttle.mdx
+++ b/migrations/migrating-to-shuttle.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Migrating to Shuttle"
+title: "Migration quickstart example"
 description: "Short guide on how to migrate your existing project over to Shuttle"
-icon: "dove"
+
 ---
 
 This example shows how to migrate an Axum app with a Postgres database.
