--- a/migrations/migrating-checklist.mdx
+++ b/migrations/migrating-checklist.mdx
@@ -13,6 +13,8 @@ Shuttle currently supports any kind of service that carries out HTTP traffic. Th
 
 We also additionally support hosted services that can carry out scheduled tasks (or cronjobs).
 
+If there is a service you'd like to run but there is no native Shuttle integration service, you can [create your own custom service](/migrations/frameworks/custom-service) to run it on Shuttle.
+
 ## Supported resources
 Natively speaking, we also support the following resources/infrastructure:
 - Postgres
@@ -21,10 +23,10 @@ Natively speaking, we also support the following resources/infrastructure:
 Note that resources will be provisioned **at runtime** - you will need to account for this when running on Shuttle. If your web service is spawned from a CLI command (or a method that does not allow spawning directly from `async fn main()`), you may want to consider adding a standalone binary for specifically spawning your web server. You can check out our example that shows how to do that [here.](https://github.com/shuttle-hq/shuttle-examples/tree/main/other/standalone-binary)
 
 We also additionally support the following resources (although not natively, so you will still need to provide your own credentials):
-- [Turso](/resources/shuttle-turso)
-- [Qdrant](/resources/shuttle-qdrant)
-- [Apache OpenDAL](/resources/shuttle-opendal)
-- [OpenAI](/resources/shuttle-openai)
+- [Turso](/integrations/shuttle-turso)
+- [Qdrant](/integrations/shuttle-qdrant)
+- [Apache OpenDAL](/integrations/shuttle-opendal)
+- [OpenAI](/integrations/shuttle-openai)
 
 ## My resource isn't listed!
 If your listed resource isn't here, you can still connect to it normally through HTTP. If there is anything you'd like to see officially supported, reach out to us!
