--- a/platform-update/migration.mdx
+++ b/platform-update/migration.mdx
@@ -1,10 +1,10 @@
 ---
-title: Migrating to the new platform
-description: How to migrate projects from shuttle.rs to shuttle.dev
+title: Transfer to the new platform
+description: How to transfer projects from shuttle.rs to shuttle.dev
 
 ---
 
-This guide is for migration old projects from **shuttle.rs** to the new **shuttle.dev** platform.
+This guide is for transferring old projects from **shuttle.rs** to the new **shuttle.dev** platform.
 If you are a new Shuttle user, you can ignore this document and start from [Installation](/getting-started/installation).
 
 ## 1. Check platform features & policies
