--- a/platform-update/platform-update.mdx
+++ b/platform-update/platform-update.mdx
@@ -1,7 +1,6 @@
 ---
-title: Platform update
+title: Platform Update
 description: In Q4 2024, Shuttle is launching a new and improved platform
-icon: layer-group
 ---
 
 Introducing the new Shuttle platform! We've supercharged what developers love about Shuttle, combining our powerful developer experience with enterprise-grade infrastructure. For developers, we've kept it simple and intuitive - no complex configs, just focus on your Rust code. On the production side, we've implemented VM-level isolation, increased reliability and scalability to meet real-world demands. From solo developers to enterprise teams, Shuttle now offers the perfect blend of ease and production-ready robustness.
