feat: Add updated migration docs (#305)
* feat: add updated migration docs

* fix: broken link

* fix: broken links

* refactor: seperate platform migration, add migrations intro

* fix: broken links

--- a/platform-update/migration.mdx
+++ b/platform-update/migration.mdx
@@ -1,10 +1,10 @@
 ---
-title: Platform migration guide
-description: How to migrate projects from shuttle.rs to shuttle.dev
-icon: dove
+title: Transfer to the new platform
+description: How to transfer projects from shuttle.rs to shuttle.dev
+
 ---
 
-This guide is for migration old projects from **shuttle.rs** to the new **shuttle.dev** platform.
+This guide is for transferring old projects from **shuttle.rs** to the new **shuttle.dev** platform.
 If you are a new Shuttle user, you can ignore this document and start from [Installation](/getting-started/installation).
 
 ## 1. Check platform features & policies
@@ -12,7 +12,7 @@ If you are a new Shuttle user, you can ignore this document and start from [Inst
 <Warning>
 Due to the large re-write of the Shuttle platform, some features have been dropped or moved to the feature roadmap.
 
-Make sure you have read the [Platform Update Changelog](/introduction/platform-update#changelog) to verify that it is currently possible to migrate your project.
+Make sure you have read the [Platform Update Changelog](/platform-update/platform-update#changelog) to verify that it is currently possible to migrate your project.
 Notably:
 
 - Migrating **Shuttle Persist** is not currently possible as there is no drop-in replacement yet.
