--- a/introduction/docs.mdx
+++ b/introduction/docs.mdx
@@ -4,7 +4,7 @@ description: "Begin your Shuttle journey with our comprehensive documentation. L
 icon: "hand-wave"
 ---
 
-<Card title="New platform (Public Preview)" icon="layer-group" href="./platform-update">
+<Card title="New platform (Public Preview)" icon="layer-group" href="/platform-update/platform-update">
   Shuttle is launching the new and improved version of our platform. Click to read more!
 </Card>
 
@@ -54,7 +54,7 @@ icon: "hand-wave"
   <Card
     title="Migration"
     icon="Rocket"
-    href="/guides/migrating-to-shuttle"
+    href="/migrations/migrating-to-shuttle"
     color="#fb7f14"
   >
     Migrate an existing project to Shuttle
