--- a/getting-started/quick-start.mdx
+++ b/getting-started/quick-start.mdx
@@ -11,7 +11,7 @@ If you haven't, go to the [installation](./installation) guide.
 
 ## Login
 
-The login command opens the [Shuttle Console](https://console.shuttle.dev/) where you can copy your API key:
+The login command opens the [Shuttle Console](https://console.shuttle.dev/) to authenticate your CLI:
 
 ```sh
 shuttle login
@@ -19,7 +19,7 @@ shuttle login
 
 ## Create your first project
 
-The init command lets you generate a Hello World project or one of our [examples](/examples) or [templates](/templates).
+The init command lets you generate a Hello World project or clone one of our [examples](/examples) or [templates](/templates).
 For your first project, try a Hello World template.
 
 ```sh
