--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -46,8 +46,8 @@ Use the global `--debug` flag to print detailed debug output.
 ### Get started
 
 - `cargo install cargo-shuttle`: For more alternatives, see [Installation](/getting-started/installation).
-- `shuttle login`: Open the Shuttle Console and paste the API key to log in.
-- `shuttle init`: Log in and initialize a project.
+- `shuttle login`: Log in via the Shuttle Console.
+- `shuttle init`: Generate a project from a template.
 - `shuttle account`: Check account details.
 
 ### Local run
