--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -80,6 +80,7 @@ All project-related commands can use:
 - `shuttle project status`: Check the state of this project.
 - `shuttle project link`: Link this project folder to a project on Shuttle.
 - `shuttle project delete`: Delete a project.
+- `shuttle project update name <new-name>`: Rename a project.
 
 ### Manage deployments and logs
 
