--- a/docs/builds.mdx
+++ b/docs/builds.mdx
@@ -89,10 +89,11 @@ cd frontend
 trunk build --release
 ```
 
+Note: To use the built static assets at runtime, use [build.assets](/docs/files#build-assets).
+
 ### Example: Install a runtime dependency
 
 ```sh shuttle_setup_container.sh
 apt update
 apt install -y ffmpeg
 ```
-
