--- a/migrations/introduction.mdx
+++ b/migrations/introduction.mdx
@@ -6,7 +6,7 @@ description: "Four simple steps to migrate to Shuttle"
 ## Introduction
 If you are migrating from another platform to Shuttle (or simply want to add the Shuttle runtime to your project), here are four simple steps you can take to fully migrate your project over to Shuttle.
 
-Note that this page assumes you've already installed the `cargo-shuttle` CLI - if you haven't yet, you can learn how to do so [here.](/getting-started/installation)
+Note that this page assumes you've already installed the Shuttle CLI - if you haven't yet, you can learn how to do so [here.](/getting-started/installation)
 
 ## How to Migrate
 ### 1. Check your service can be migrated
