fix: rustup example

--- a/docs/builds.mdx
+++ b/docs/builds.mdx
@@ -74,7 +74,7 @@ Create them at the root of your project.
 In this example, we install and switch to the `nighlty` toolchain.
 
 ```sh shuttle_prebuild.sh
-rustup update nightly --profile minimal
+rustup install nightly --profile minimal
 rustup default nightly
 ```
 
